--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -919,7 +919,7 @@
                             <div class="col-xs-12 col-lg-3 estimate-cover" ng-class="{'active' : modelVal.estimate_selection_type =='op3'}" ng-click="modelVal.estimate_selection_type = 'op3';estimateSelectionChanged('luxury')">
                             <div class="pigy"><info-tip quick-tip-data="luxuInfoText" info-width="28px"></info-tip></div>
                             <div class="image-div text-center">
-                                <img src="assets/images/luxurious.png">
+                                <img src="assets/images/jewellery.svg">
                             </div>
                             <h3 class="text-center">Luxurious</h3>
                             <h4 class="text-center"><span class="currency">&#8377</span><span class="content" ng-bind="retirement.goalEstimates.luxury.sip"></span></h4>
@@ -1151,7 +1151,7 @@
                             <div class="col-xs-12 col-lg-3 estimate-cover" ng-class="{'active' : modelVal.estimate_selection_type =='op3'}" ng-click="modelVal.estimate_selection_type = 'op3';estimateSelectionChanged('luxury')">
                             <div class="pigy"><info-tip quick-tip-data="luxuInfoText" info-width="28px"></info-tip></div>
                             <div class="image-div text-center">
-                                <img src="assets/images/luxurious.png">
+                                <img src="assets/images/jewellery.svg">
                             </div>
                             <h3 class="text-center">Luxurious</h3>
                             <h4 class="text-center"><span class="currency">&#8377</span><span class="content" ng-bind="education.goalEstimates.luxury.sip"></span></h4>
@@ -1427,7 +1427,7 @@
                             <div class="col-xs-12 col-lg-3 estimate-cover" ng-class="{'active' : modelVal.estimate_selection_type =='op3'}" ng-click="modelVal.estimate_selection_type = 'op3';estimateSelectionChanged('luxury')">
                             <div class="pigy"><info-tip quick-tip-data="luxuInfoText" info-width="28px"></info-tip></div>
                             <div class="image-div text-center">
-                                <img src="assets/images/luxurious.png">
+                                <img src="assets/images/jewellery.svg">
                             </div>
                             <h3 class="text-center">Luxurious</h3>
                             <h4 class="text-center"><span class="currency">&#8377</span><span class="content" ng-bind="property.goalEstimates.luxury.sip"></span></h4>
@@ -1699,7 +1699,7 @@
                             <div class="col-xs-12 col-lg-3 estimate-cover" ng-class="{'active' : modelVal.estimate_selection_type =='op3'}" ng-click="modelVal.estimate_selection_type = 'op3';estimateSelectionChanged('luxury')">
                             <div class="pigy"><info-tip quick-tip-data="luxuInfoText" info-width="28px"></info-tip></div>
                             <div class="image-div text-center">
-                                <img src="assets/images/luxurious.png">
+                                <img src="assets/images/jewellery.svg">
                             </div>
                             <h3 class="text-center">Luxurious</h3>
                             <h4 class="text-center"><span class="currency">&#8377</span><span class="content" ng-bind="automobile.goalEstimates.luxury.sip"></span></h4>
@@ -1959,7 +1959,7 @@
                             <div class="col-xs-12 col-lg-3 estimate-cover" ng-class="{'active' : modelVal.estimate_selection_type =='op3'}" ng-click="modelVal.estimate_selection_type = 'op3';estimateSelectionChanged('luxury')">
                             <div class="pigy"><info-tip quick-tip-data="luxuInfoText" info-width="28px"></info-tip></div>
                             <div class="image-div text-center">
-                                <img src="assets/images/luxurious.png">
+                                <img src="assets/images/jewellery.svg">
                             </div>
                             <h3 class="text-center">Luxurious</h3>
                             <h4 class="text-center"><span class="currency">&#8377</span><span class="content" ng-bind="vacation.goalEstimates.luxury.sip"></span></h4>
@@ -2187,7 +2187,7 @@
                             <div class="col-xs-12 col-lg-3 estimate-cover" ng-class="{'active' : modelVal.estimate_selection_type =='op3'}" ng-click="modelVal.estimate_selection_type = 'op3';estimateSelectionChanged('luxury')">
                             <div class="pigy"><info-tip quick-tip-data="luxuInfoText" info-width="28px"></info-tip></div>
                             <div class="image-div text-center">
-                                <img src="assets/images/luxurious.png">
+                                <img src="assets/images/jewellery.svg">
                             </div>
                             <h3 class="text-center">Luxurious</h3>
                             <h4 class="text-center"><span class="currency">&#8377</span><span class="content" ng-bind="wedding.goalEstimates.luxury.sip"></span></h4>
@@ -2581,7 +2581,7 @@
                             <div class="col-xs-12 col-lg-3 estimate-cover" ng-class="{'active' : modelVal.estimate_selection_type =='op3'}" ng-click="modelVal.estimate_selection_type = 'op3';estimateSelectionChanged('luxury')">
                             <div class="pigy"><info-tip quick-tip-data="luxuInfoText" info-width="28px"></info-tip></div>
                             <div class="image-div text-center">
-                                <img src="assets/images/luxurious.png">
+                                <img src="assets/images/jewellery.svg">
                             </div>
                             <h3 class="text-center">Luxurious</h3>
                             <h4 class="text-center"><span class="currency">&#8377</span><span class="content" ng-bind="jewellery.goalEstimates.luxury.sip"></span></h4>
@@ -2706,7 +2706,7 @@
         </div>
     </div>
     <div class="typeSwiper">
-        <div class="image-backdrop"><img src="assets/images/luxurious.png"></div>
+        <div class="image-backdrop"><img src="assets/images/jewellery.svg"></div>
         <p>Jewellery</p>
     </div>    
     <div class="fin-btn-group gotoPages" ng-show="$root.lastSlide">
