--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -39,7 +39,7 @@
 				<!-- <h3 class="text-center" ng-if="!portfolio_flag">You currently have no planned</h3>
 				<h3 class="text-center" ng-if="portfolio_flag">You currently have planned</h3>
 				<p class="text-center score" ng-bind="dashCounts['investCount']"></p> -->
-				<h4 class="text-center" ng-if="portfolio_flag"><span class="highlight">{{dashCounts['investCount']}}</span> goals under planning</h4>
+				<h4 class="text-center" ng-if="portfolio_flag"><span class="highlight goal_number">{{dashCounts['investCount']}}</span> goals under planning</h4>
 
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" >
