--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -101,6 +101,9 @@ section{
 			@media @below768{
 				width:100%;
 			}
+			.goal_number{
+				.PIXEL2EM(24);
+			}
 		}
 		.goals-cover{
 			cursor:pointer;
