--- a/less/swiper.less
+++ b/less/swiper.less
@@ -201,6 +201,11 @@
         .typeSwiper{
           width:122px;
         }
+        .swiper-slide{
+          .fin-btn-white{
+            right: -67% !important;
+          }
+        }
       }
       &.automobile,
       &.wedding,
