--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -318,7 +318,7 @@
 					<div class="row">
 						<div class="no-padding col-xs-12">
 							<div class="progress">
-							    <div class="progress-bar" role="progressbar" ng-style="{'width':{{finGoalsModal.progress}}%}">
+							    <div class="progress-bar" role="progressbar" ng-style="{'width':'{{finGoalsModal.progress}}%'}">
 							    <span class="progress-price"><span class="currency">&#8377</span><span class="amount ng-binding">{{finGoalsModal.invested_value}}</span></span>
 							    <span class="progress-percentage placeholder">{{finGoalsModal.progress}}%</span>
 							    </div>
