--- a/less/login.less
+++ b/less/login.less
@@ -73,6 +73,7 @@
 						.GLOBAL_FONT_STYLE('Roboto-Bold',@marinerapprox,normal);
 						.PIXEL2EM(16);
 						top:-72%;
+						left: 0;
 					}
 				}
 			}
