--- a/less/swiper.less
+++ b/less/swiper.less
@@ -90,7 +90,7 @@
         right:0px;
         @media @below768{
           left:0%;
-          top: 6%;
+          top: 32px;
           width: 100% !important;
         }
         .image-backdrop{
@@ -282,7 +282,7 @@
         transition:all 0.2s ease;
         min-height: 450px;
         @media @below768{
-          padding-top: 50% !important;
+          padding-top: 64% !important;
           margin-bottom: 12%;
           float: left;
           width: 100%;
@@ -462,7 +462,7 @@
           top:48%;
           transform:translateY(-48%);
           @media @below768{
-            top: 32%;
+            top: 55%;
             transform:translateY(-48%);
           }
           .incomeSource{
