--- a/app/modules/investwithdraw/views/withdrawStart.html
+++ b/app/modules/investwithdraw/views/withdrawStart.html
@@ -11,7 +11,7 @@
 								<div class="thead">
 									<div class="tr">
 										<div class="th">
-											<p>{{eachRecommend.key}} Schemes</p>
+											<p>{{eachRecommend.key | capitalizeScheme}} Schemes</p>
 										</div>
 										<div class="th">
 											<p>Sub Type</p>
@@ -36,24 +36,25 @@
 											<p>{{schemes.fund_category}}</p>
 										</div>
 										<div class="td">
-											<p><span class="currency">&#8377;</span><span class="amount">{{schemes.return_value}}</span></p>
+											<p><span class="currency">&#8377;</span><span class="amount" ng-init="cal">{{schemes.return_value}}</span></p>
 										</div>
 										<div class="td">
 											<p>
 												<div class="checkbox-cover text-center">
-													<input type="checkbox" id="{{recommendedSchemes.goal_name}}{{eachRecommend.key}}{{schemes.fund_id}}" name="type" value="{{schemes.fund_id}}" ng-model="withdraw.all_units[recommendedSchemes.goal_id][schemes.fund_id]">
-													<label for="{{recommendedSchemes.goal_name}}{{eachRecommend.key}}{{schemes.fund_id}}"><span></span></label>
+													<input type="checkbox" id="{{recommendedSchemes.goal_name}}{{eachRecommend.key}}{{schemes.fund_id}}{{recommendedSchemes.goal_id}}" name="type" value="{{schemes.fund_id}}" ng-model="withdraw.all_units[recommendedSchemes.goal_id][schemes.fund_id]" ng-change="withdraw.all_units[recommendedSchemes.goal_id][schemes.fund_id] == true? withdraw.amount[recommendedSchemes.goal_id][schemes.fund_id] = schemes.return_value : withdraw.amount[recommendedSchemes.goal_id][schemes.fund_id] = '0';validateRedeem(schemes, withdraw.amount[recommendedSchemes.goal_id][schemes.fund_id], recommendedSchemes)">
+													<label for="{{recommendedSchemes.goal_name}}{{eachRecommend.key}}{{schemes.fund_id}}{{recommendedSchemes.goal_id}}"><span></span></label>
 												</div>
 											</p>
 										</div>
 										<div class="td">
 											<div class="input-cover">
 												<span class="currency">&#8377;</span>
-												<input format="number" ng-model="withdraw.amount[recommendedSchemes.goal_id][schemes.fund_id]" type="text" name="">
+												<input format="number" ng-model="withdraw.amount[recommendedSchemes.goal_id][schemes.fund_id]" ng-change="validateRedeem(schemes, withdraw.amount[recommendedSchemes.goal_id][schemes.fund_id], recommendedSchemes)" ng-init="withdraw.amount[recommendedSchemes.goal_id][schemes.fund_id] = '0'" type="text" name="" ng-disabled="withdraw.all_units[recommendedSchemes.goal_id][schemes.fund_id]">
 											</div>
 										</div>
 									</div>
 								</div>
+								
 							</div>
 						</div>
 						<div class="tfooter">
@@ -61,12 +62,15 @@
 								<p>Total Amount</p>
 							</div>
 							<div class="sipTotal">
-								<p><span class="currency">&#8377;</span><span>93,200</span></p>
+								<p><span class="currency">&#8377;</span><span>{{getTotalCurrentValue(recommendedSchemes)}}</span></p>
 							</div>
 							<div class="lumpSumTotal">
-								<p><span class="currency">&#8377;</span><span>{{getTotal()}}</span></p>
+								<p><span class="currency">&#8377;</span><span>{{getTotal(withdraw,recommendedSchemes.goal_id)}}</span></p>
 							</div>
 						</div>
+						<span class="alert alert-danger alert-dismissable col-xs-5 fadeOut text-center" ng-bind="showErrorMessage[recommendedSchemes.goal_id]" ng-if="showErrorMessage[recommendedSchemes.goal_id]"></span>
+
+
 					</div>
 				</div>
 			</div>
@@ -84,7 +88,7 @@
 <div class="fin-btn-group addMargin investStep1">
     <button click-redirect="/planInvest" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANING</button>
     <!-- <button data-toggle="modal" data-target="#withdrawModal" class="fin-app-btn fin-orange">WITHDRAW NOW</button> -->
-    <button ng-click="proceedWithdraw(withdraw)" class="fin-app-btn fin-orange" ng-disabled="!termsChecked">WITHDRAW NOW</button>
+    <button ng-click="proceedWithdraw(withdraw)" class="fin-app-btn fin-orange" ng-disabled="!termsChecked && withdrawError == '1'">WITHDRAW NOW</button>
 
 </div>
 <div class="modal fade fade-scale" id="withdrawModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
