Some spelling mistakes, pass in extra parameter for web login for smaller expiry of access token, new registration dashboard error

--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -2771,7 +2771,7 @@
                     <div class="row">
                         <div class="gauge-result">
                             <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="infoProjTaxSaving" info-width="100%" class-name="guagePig"></span>Projected Tax Saving</p></div>
-                            <p><span class="placeholder addPadding-4Per addPaddingLeft-20Per">Note:This amount will be invested in Equity Linked<span class="nextline">Savings Schemes (ELSS) of reputed asset</span><span class="nextline">management companies,to maximize your</span>tax savings.</span></p>
+                            <p><span class="placeholder addPadding-4Per addPaddingLeft-20Per">Note: This amount will be invested in <span class="nextline">Equity Linked Savings Schemes (ELSS) </span><span class="nextline">of reputed asset management companies, </span>to maximize your tax savings.</span></p>
                         </div>
                         <div class="gauge-result">
                             <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="infoProjInvGrowth" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
