--- a/app/modules/investwithdraw/views/withdrawStart.html
+++ b/app/modules/investwithdraw/views/withdrawStart.html
@@ -72,8 +72,8 @@
 			</div>
 		</div>
 	</div>
-	<p class="result-total" ng-show="$root.noWithdraw">You don't have suffecient funds to withdraw.</p>
-	<p class="result-total">You will be recieving <span class="highlight"><span class="currency">&#8377;</span><span class="amount">0</span></span> as above.</p>
+	<p class="result-total" ng-show="$root.noWithdraw">You don't have sufficient funds to withdraw.</p>
+	<p class="result-total">You will be receiving <span class="highlight"><span class="currency">&#8377;</span><span class="amount">0</span></span> as above.</p>
 </section>
 <div class="termsConditions">
 	<div class="checkbox-cover">
