--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -68,7 +68,7 @@
 				<h4 class="text-center" ng-if="!user_flags.is_virtual">Track your</h4>
 				<p class="text-center score dashboardSubText no-margin" ng-if="!user_flags.is_virtual">CURRENT INVESTMENTS</p>
 				
-				<h4 class="text-center" ng-if="user_flags.is_virtual">Track how your</h4>
+				<h4 class="text-center" ng-if="user_flags.is_virtual && dashCounts['investCount']">Track how your</h4>
 				<p class="text-center score dashboardSubText no-margin" ng-if="user_flags.is_virtual">PLANNED GOALS</p>
 				<h4 class="text-center" ng-if="user_flags.is_virtual">would grow if invested</h4>
 
