--- a/less/invest.less
+++ b/less/invest.less
@@ -39,6 +39,9 @@ section{
 				&.bottom{
 					margin-top:10px;
 					margin-left:48px;
+					@media @below768{
+						margin-left: 0;
+					}
 				}				
 			}
 			.pie-chart-legend{
