--- a/app/modules/investwithdraw/views/investStep1.html
+++ b/app/modules/investwithdraw/views/investStep1.html
@@ -1,7 +1,7 @@
 <section class="investStep1">
 	<div class="col-xs-12">
 		<div class="row">
-			<div class="col-xs-4 pie-cover">
+			<div class="col-xs-12 col-lg-4 pie-cover">
 				<p><span class="placeholder pie-header">Your asset allocation for the year</span></p>
 				<invest-pie-chart items="$root.resultPercentage" title="$root.pieTitle"></invest-pie-chart>
 				<div class="pie-chart-legend">
@@ -17,7 +17,7 @@
 				</div>
 				<span class="placeholder bottom">*investment amounts are rounded off to the nearest hundred</span>
 			</div>
-			<div class="col-xs-8">
+			<div class="col-xs-12 col-lg-8 xScrollDiv">
 				<p><span class="placeholder pie-header">Your goal summary</span></p>
 				<div class="table-outer-cover investNowTable">
 					<div class="thead">
@@ -72,9 +72,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="fin-btn-group addMargin">
-				    <button click-redirect="/reviewInvestment" class="fin-app-btn fin-orange">CONTINUE</button>
-				</div>
+				
+			</div>
+			<div class="fin-btn-group addMargin">
+			    <button click-redirect="/reviewInvestment" class="fin-app-btn fin-orange">CONTINUE</button>
 			</div>
 		</div>
 	</div>
