--- a/app/modules/registration/views/register.html
+++ b/app/modules/registration/views/register.html
@@ -25,7 +25,7 @@
 	      				<div class="form-group">
 	      					<div class="col-xs-2">
 	      						<div class="row">
-		      						<select dropdown ng-model="prefix"><option selected value="+91">+91</option><option value="+71">+71</option></select>
+		      						<select dropdown disabled ng-model="prefix"><option selected value="+91">+91</option></select>
 	      						</div>
 	      					</div>
 	      					<div class="col-xs-offset-1 col-xs-9">
@@ -47,10 +47,10 @@
 									<input ng-class="{'has-error':registerForm.password.$error.pattern}" type="{{defaultType1}}" ng-model="register.password" check-password name="password" required>
 									<label>Password</label>
 									<span class="show-password"><img src="assets/images/showPassword.png" ng-click="((defaultType1 =='password')?defaultType1 ='text':defaultType1 = 'password')"></span>
-								        <span class="without-error" ng-class="{'error-text':registerForm.password.$error.oneNumber,'normal':reset}"><span ng-if="registerForm.password.$error.oneNumber" class="wrong"></span><span ng-if="!registerForm.password.$error.oneNumber" class="correct"></span>Please enter atleast one number</span>
+								        <span class="without-error" ng-class="{'error-text':registerForm.password.$error.minlength,'normal':reset}"><span ng-if="registerForm.password.$error.minlength" class="wrong"></span><span ng-if="!registerForm.password.$error.minlength" class="correct"></span>Minimum 8 characters</span>
+								        <span class="without-error" ng-class="{'error-text':registerForm.password.$error.oneSmall,'normal':reset}"><span ng-if="registerForm.password.$error.oneSmall" class="wrong"></span><span ng-if="!registerForm.password.$error.oneSmall" class="correct"></span>Minimum 1 alphabet (Aa-Zz)</span>
+								        <span class="without-error" ng-class="{'error-text':registerForm.password.$error.oneNumber,'normal':reset}"><span ng-if="registerForm.password.$error.oneNumber" class="wrong"></span><span ng-if="!registerForm.password.$error.oneNumber" class="correct"></span>Minimum 1 digit (0-9)</span>
 								        <!-- <span class="without-error" ng-class="{'error-text':registerForm.password.$error.oneUpper,'normal':reset}"><span ng-if="registerForm.password.$error.oneUpper" class="wrong"></span><span ng-if="!registerForm.password.$error.oneUpper" class="correct"></span>Please enter one upper case</span> -->
-								        <span class="without-error" ng-class="{'error-text':registerForm.password.$error.oneSmall,'normal':reset}"><span ng-if="registerForm.password.$error.oneSmall" class="wrong"></span><span ng-if="!registerForm.password.$error.oneSmall" class="correct"></span>Please enter atleast one small case</span>
-								        <span class="without-error" ng-class="{'error-text':registerForm.password.$error.minlength,'normal':reset}"><span ng-if="registerForm.password.$error.minlength" class="wrong"></span><span ng-if="!registerForm.password.$error.minlength" class="correct"></span>Please enter minimum 8 character's</span>
 								</div>								
 							</div>
 						</div>
