--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -9,7 +9,7 @@
             <div class="swiper-content content-1 content-risk" ng-init="disabled = 'locked'">
 
                 <div class="col-lg-12 col-xs-12">
-                    <p class="pull-left col-lg-2 col-xs-5 risk-questions">I am a <span class="swiper-input risk-age"><input only-number type="text" name="year" required ng-model="modelVal.A1"></span> years old</p><!-- <select dropdown dropdown-disable="disabled" ng-model="modelVal.A7"><option value="op1">Male</option><option value="op2">Female</option></select> -->
+                    <p class="pull-left col-lg-2 col-xs-5 risk-questions">I am a <span class="swiper-input risk-age"><input only-number type="text" name="year" required ng-model="modelVal.A1"></span> year old</p><!-- <select dropdown dropdown-disable="disabled" ng-model="modelVal.A7"><option value="op1">Male</option><option value="op2">Female</option></select> -->
                     <div class="selectRisk_cover col-lg-1 col-xs-3 no-padding">
                         <input type="radio" required id="male" name="gender" ng-model="modelVal.A7" value="op1">
                         <label for ="male">
@@ -692,8 +692,8 @@
             <form name="quickInvestForm3" novalidate>
             <div class="swiper-content content-1">
                   <p class="question">I would like to invest <span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" ng-keyup="showMessage2 = true" type="text" ame="year" required ng-model="modelVal.A4"></span>right now</p>
-                  <span class="error-text" ng-show="showMessage2 && (modelVal.A4 < 5000 || modelVal.A4 == undefined && modelVal.A2 != '')">Minimum amount must be greater than or equal to 5000</span>
-                  <span class="error-text" ng-show="showMessage2 && (modelVal.A4 > 9999999 || modelVal.A4 == undefined && modelVal.A2 != '')">Maximum amount must be less than or equal to 9999999</span>
+                  <span class="error-text" ng-show="showMessage2 && (modelVal.A4 < 5000 || modelVal.A4 == undefined)">Minimum amount must be greater than or equal to 5000</span>
+                  <span class="error-text" ng-show="showMessage2 && (modelVal.A4 > 9999999 || modelVal.A4 == undefined)">Maximum amount must be less than or equal to 9999999</span>
                   <span class="error-text" ng-show="showMessage2 && modelVal.A4 >= 5000 && (modelVal.A4%100) > 0">Amount must be in multiples of 100</span>
             </div>
             </form>
@@ -3177,8 +3177,8 @@
             <form name="quickInvestForm1" novalidate>
                 <div class="swiper-content content-1">
                   <p class="question">I would like to invest <span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" type="text" ame="year" required ng-init="modelVal.A2 || 0" ng-keyup="showMessage1 = true" ng-model="modelVal.A2" maxlength="8"></span></p>
-                  <span class="error-text" ng-show="showMessage1 && (modelVal.A2 < 5000 && modelVal.A2 != '')">Minimum amount must be greater than or equal to 5000</span>
-                  <span class="error-text" ng-show="showMessage2 && (modelVal.A4 > 9999999 || modelVal.A4 == undefined && modelVal.A2 != '')">Maximum amount must be lesser than or equal to 9999999</span>
+                  <span class="error-text" ng-show="showMessage1 && (modelVal.A2 < 5000 || modelVal.A2 == undefined)">Minimum amount must be greater than or equal to 5000</span>
+                  <span class="error-text" ng-show="showMessage2 && (modelVal.A4 > 9999999)">Maximum amount must be lesser than or equal to 9999999</span>
                 </div>
             </form>
         </div>
@@ -3228,8 +3228,7 @@
     <div class="fin-btn-group gotoPages" ng-show="$root.lastSlide">
         <button class="fin-link-btn content-prev" click-redirect="/earnInterestStart" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
         <button ng-show="(step == 1)" ng-disabled="modelVal.A1 == ''" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 2)" ng-disabled="(modelVal.A2 == '' || modelVal.A2 < 5000 || modelVal.A2 > 9999999)" ng-click="appendValues(modelVal);(step = step + 1);getAssetAllocationCategory()" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        
+        <button ng-show="(step == 2)" ng-disabled="(!modelVal.A2 || modelVal.A2 == '' || modelVal.A2 < 5000 || modelVal.A2 > 9999999)" ng-click="appendValues(modelVal);(step = step + 1);getAssetAllocationCategory()" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>
 </div>
 <div ng-if="swiperName == 'registrationComplete'" class="fadeIn swiper-container customSwiper registrationComplete type2Sliders" ng-init="step = 1">
